@@ -754,6 +754,15 @@ name|NUMBEROFBLOCKSPERBANK
 init|=
 literal|"solr.hdfs.blockcache.blocksperbank"
 decl_stmt|;
+DECL|field|LOCALITYMETRICS_ENABLED
+specifier|public
+specifier|static
+specifier|final
+name|String
+name|LOCALITYMETRICS_ENABLED
+init|=
+literal|"solr.hdfs.locality.metrics.enabled"
+decl_stmt|;
 DECL|field|KERBEROS_ENABLED
 specifier|public
 specifier|static
@@ -1521,6 +1530,18 @@ operator|=
 name|hdfsDir
 expr_stmt|;
 block|}
+if|if
+condition|(
+name|params
+operator|.
+name|getBool
+argument_list|(
+name|LOCALITYMETRICS_ENABLED
+argument_list|,
+literal|false
+argument_list|)
+condition|)
+block|{
 name|LocalityHolder
 operator|.
 name|reporter
@@ -1530,6 +1551,7 @@ argument_list|(
 name|hdfsDir
 argument_list|)
 expr_stmt|;
+block|}
 name|boolean
 name|nrtCachingDirectory
 init|=
